--- a/train_classifier.ipynb
+++ b/train_classifier.ipynb
@@ -91,7 +91,7 @@
    ],
    "source": [
     "# Image sample from dataset\n",
-    "# Note that they are all grayscale images with size 48x48\n",
+    "# Images are grayscale with size 48x48\n",
     "from PIL import Image\n",
     "\n",
     "img = Image.open(\"train/Angry/0.jpg\")\n",
